fixed height on mobile

--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ p {
 }
 
 #container {
-	min-height: 100%;
+	/* min-height: 100%; */
+	height: 100vh;
 }
 
 #main {
@@ -299,7 +300,7 @@ body {
 	background-repeat: no-repeat;
 	background-position: center center;
 	color: black;
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 	box-shadow: inset 0px 0px 50px 50px rgba(0, 0, 0, 0.4);
 }
